--- a/atividade1.html
+++ b/atividade1.html
@@ -28,10 +28,14 @@
     <li><a href="#">Página Inicial</a></li>
     <li><a href="#">Sobre</a></li>
     <li><a href="#">Serviços</a></li>
-    <li><a href="#">Contato</a></li>
+    <li><a href="#">Contatos</a></li>
   </ul>
 </nav>
     <h1>Seja bem vindo!</h1>
+    <h1>Seja bem vindo!</h1>
+    <h1>Seja bem vindo!</h1>
+    <h1>Seja bem vindo!</h1>
+
 
     <p>Ande e desfrute do que Garanhuns tem de melhor a oferecer.</p>
 </body>
