--- a/atividade1.html
+++ b/atividade1.html
@@ -20,6 +20,10 @@
         p {
             font-size: 16px;
         }
+
+        img {
+            width: 150px;
+        }
         
     </style>
 <body>
@@ -31,10 +35,8 @@
     <li><a href="#">Contatos</a></li>
   </ul>
 </nav>
-    <h1>Seja bem vindo!</h1>
-    <h1>Seja bem vindo!</h1>
-    <h1>Seja bem vindo!</h1>
-    <h1>Seja bem vindo!</h1>
+    <h1>Sejam bem vindos!</h1>
+    <img src="img.gt.png" alt="imagem">
 
 
     <p>Ande e desfrute do que Garanhuns tem de melhor a oferecer.</p>
