Alterado a posição do menu para abaixo do p.

--- a/atividade1.html
+++ b/atividade1.html
@@ -27,19 +27,20 @@
         
     </style>
 <body>
-    <nav>
-  <ul>
-    <li><a href="#">Página Inicial</a></li>
-    <li><a href="#">Sobre</a></li>
-    <li><a href="#">Serviços</a></li>
-    <li><a href="#">Contatos</a></li>
-  </ul>
-</nav>
+    
     <h1>Sejam bem vindos!</h1>
     <img src="img.gt.png" alt="imagem">
 
 
     <p>Ande e desfrute do que Garanhuns tem de melhor a oferecer.</p>
+    <nav>
+        <ul>
+            <li><a href="atividade1.html">Página Inicial</a></li>
+            <li><a href="#">Sobre</a></li>
+            <li><a href="#">Serviços</a></li>
+            <li><a href="#">Contatos</a></li>
+         </ul>
+    </nav>
 </body>
 
 </html>
